# agentcon-2026

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdown-link-check-site.json  .markdown-link-check.json  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  QUALITY_SCORE.md  README.md  VERSION.md  commitlint.config.js  eslint.config.mjs  lefthook.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: README.md  devcontainer-lock.json  devcontainer.json  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  model-catalog.json  terminology-blocklist.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  infrastructure-request.yml  scenario-request.yml
.github/agents/: 01-orchestrator.agent.md  02-requirements.agent.md  03-architect.agent.md  04-design.agent.md  04g-governance.agent.md  05-iac-planner.agent.md  06b-bicep-codegen.agent.md  06t-terraform-codegen.agent.md  07b-bicep-deploy.agent.md  07t-terraform-deploy.agent.md  08-as-built.agent.md  09-diagnose.agent.md  10-challenger.agent.md  11-context-optimizer.agent.md  e2e-orchestrator.agent.md
.github/data/: avm-bicep-modules.csv  avm-module-index.json  avm-terraform-modules.csv  azure-deprecations.json  governance-policy-baseline.fixture.json  governance-policy-baseline.json
.github/instructions/: agent-authoring.instructions.md  agent-operating-frame.instructions.md  agent-skills.instructions.md  astro.instructions.md  azure-artifacts.instructions.md  azure-yaml.instructions.md  code-quality.instructions.md  context-optimization.instructions.md  docs-trigger.instructions.md  docs.instructions.md  drawio.instructions.md  github-actions.instructions.md  governance-discovery.instructions.md  iac-bicep-best-practices.instructions.md  iac-plan-best-practices.instructions.md  iac-terraform-best-practices.instructions.md  instructions.instructions.md  javascript.instructions.md  json.instructions.md  lesson-collection.instructions.md  markdown-docs.instructions.md  markdown.instructions.md  no-hardcoded-counts.instructions.md  no-heredoc.instructions.md  (+7 more)
agent-output/: .gitkeep  README.md
tools/apex-recall/: pyproject.toml
tools/apex-recall/docs/: decision-keys.md  show-schema.md
tools/apex-recall/src/apex_recall/: __init__.py  __main__.py  config.py  indexer.py  state_writer.py  types.py
tools/apex-recall/src/apex_recall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/apex-recall/src/apex_recall/commands/: __init__.py  checkpoint.py  complete_step.py  decide.py  decisions.py  files.py  finding.py  health.py  init.py  reindex.py  review_audit.py  search.py  sessions.py  show.py  start_step.py  transition.py
tools/apex-recall/tests/: test_complete_step_hint.py  test_show_steps.py  test_transition.py
tools/mcp-servers/azure-pricing/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tools/mcp-servers/azure-pricing/scripts/: install.py  setup.ps1  test_setup.ps1
tools/mcp-servers/azure-pricing/scripts/dev/: debug_handler_return.py  debug_suggestions.py  exact_mcp_handler_test.py  find_app_service.py  run_server.py  simulate_mcp_call.py
tools/mcp-servers/azure-pricing/src/azure_pricing_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  disk_cache.py  formatters.py  handlers.py  mcp_response.py  meter_units.py  models.py  response_format.py  schemas.py  server.py  tools.py
tools/mcp-servers/azure-pricing/src/azure_pricing_mcp/admin/: __init__.py  handlers.py  tools.py
tools/mcp-servers/azure-pricing/src/azure_pricing_mcp/databricks/: __init__.py  formatters.py  handlers.py  tools.py
tools/mcp-servers/azure-pricing/src/azure_pricing_mcp/github_pricing/: __init__.py  formatters.py  handlers.py  tools.py
tools/mcp-servers/azure-pricing/src/azure_pricing_mcp/services/: __init__.py  bulk.py  databricks.py  github_pricing.py  orphaned.py  orphaned_resources.py  pricing.py  ptu.py  ptu_models.py  retirement.py  sku.py  spot.py
tools/mcp-servers/azure-pricing/tests/: conftest.py  test_azure_pricing.py  test_databricks.py  test_disk_cache.py  test_github_pricing.py  test_integration.py  test_mcp_server.py  test_meter_aware_projection.py  test_orphaned_resources.py  test_output_schemas.py  test_ptu_sizing.py  test_ri_pricing.py  test_usage_aware_projection.py
tools/mcp-servers/azure-pricing/tests/fixtures/: baseline-bytes.json  baseline_harness.py  compact-bench.json  compact_bench.py  consumer-grep.txt
(+1764 files in other folders)
