[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-recall"
version = "0.2.0"
description = "Progressive session recall CLI for APEX agent-output artifacts"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[project.scripts]
apex-recall = "apex_recall.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
