[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-pricing-mcp"
version = "5.4.0"
description = "A Model Context Protocol server for querying Azure retail pricing information (independent fork, part of azure-agentic-infraops)."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    {name = "Jonathan Vella"}
]
maintainers = [
    {name = "Jonathan Vella"}
]
keywords = ["azure", "pricing", "mcp", "model-context-protocol", "cloud-costs", "cost-estimation", "apex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp>=1.27.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.13.4",
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
# v5.0: "admin" is the canonical name for tools that need an Azure subscription
# (azure-identity + azure-mgmt-* SDKs). The empty "azure" alias below is
# preserved for one release as a deprecation shim; both currently install the
# same set. Remove [azure] in v6.0.
admin = [
    "azure-identity>=1.19.0",
    "azure-mgmt-compute>=38.0.0",
    "azure-mgmt-network>=30.2.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-subscription>=3.1.1",
    "azure-mgmt-web>=8.0.0",
    "azure-mgmt-resourcegraph>=8.0.1",
    "azure-mgmt-costmanagement>=4.0.1",
]
# Deprecated alias of [admin]. Will be removed in v6.0.
azure = [
    "azure-pricing-mcp[admin]",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "tiktoken>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/jonathan-vella/azure-agentic-infraops"
Repository = "https://github.com/jonathan-vella/azure-agentic-infraops"
Issues = "https://github.com/jonathan-vella/azure-agentic-infraops/issues"
Documentation = "https://github.com/jonathan-vella/azure-agentic-infraops/tree/main/tools/mcp-servers/azure-pricing#readme"

[project.scripts]
azure-pricing-mcp = "azure_pricing_mcp.server:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["azure_pricing_mcp*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
# v5.0: ruff format replaces black
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async test",
    "integration: mark test as integration test (requires network)",
    "slow: mark test as slow running",
]
norecursedirs = [".git", ".venv", "build", "dist", "*.egg"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check for tests
